# test_tp

./: README.md  pyproject.toml
tests/: test_functions.py
tp_marcelo/: config.py  main.py
tp_marcelo/resources/: CP.csv  CP.hea.txt
